[package]
name = "rust_l402"
authors = ["AreaLayer"]
description = "Rust L402 Client"
license = "MIT"
repository = "https://github.com/AreaLayer/rust-l402"
homepage = "https://www.arealayer.net/projects"
version = "2.1.0-beta"
edition = "2024"

[dependencies]
lnd_grpc_rust = "2.9.0"
reqwest = "0.12.12"
webpki = "0.22.4"
sha2 = "0.10.8"
nostr = "0.43.1"
tokio = "1.47.0"
idna = "1.0.0"
tonic = "=0.14.1"

[package.metadata.docs.rs]
all-features = true
rustdoc-args = ["--cfg", "docsrs"]

[package.metadata]
tags = ["rust", "lnd", "grpc", "tonic", "client", "bitcoin", "lightning"]


[lib]
name = "rust_l402"
path = "src/lib.rs"
